--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Deploy to Heroku
-        uses: heroku/actions/deploy-to-heroku@v0.6.0
+        uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: 'uploadimage'
+          heroku_email: 'mohammedhijazi727@gmail.com' 
+
