--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Install Heroku CLI
+        run: curl https://cli-assets.heroku.com/install.sh | sh
+
 
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.13.15
